--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="js/utils.js"></script>
+    <script src="js/site.js"></script>
     <script src="js/maps.js"></script>
     <script src="js/Chart.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -14,72 +15,81 @@
 
   <body>
 
-    <div class="menu">
+    <div class="info">
 
       <div class="school">
         <h2> Rutgers University - New Brunswick </h2>
       </div>
 
       <!-- Info -->
-      <div class="menu-list">
+      <div class="info-list">
         <h3> Overall </h3>
         <div class="score">
           <b>Overall score: </b><font style="color: #27ae60;">87</font>
         </div>
-        <canvas id="radar-chart" width="400" height="400"></canvas>
+        <div class="radar-chart-container">
+          <canvas id="radar-chart" width="400" height="400"></canvas>
+        </div>
         <h3> About </h3>
         <div class="location">
-          <b>Location: </b>New Brunswick, NJ
+          <span data-toggle="popover" data-trigger="hover" data-placement="top" data-content="">
+            <b>Location: </b><p></p>
+          </span>
+        </div>
+        <div class="locale">
+          <b>Locale: </b><p></p>
         </div>
         <div class="type">
-          <b>Locale: </b> Small City (population less than 100,000)
-        </div>
-        <div class="type">
-          <b>Type: </b>Public University
+          <b>Type: </b><p></p>
         </div>
         <div class="admission-rate">
-          <b>Admission rate: </b>60.9%
+          <b>Admission rate: </b><p></p>
         </div>
         <div class="retention-rate">
-          <span data-toggle="popover" data-trigger="hover" data-placement="top" data-content="13% higher than the national average">
-            <b>Retention rate: </b><font style="color: #27ae60;">87.9%</font>
+          <span data-toggle="popover" data-trigger="hover" data-placement="top" data-content="">
+            <b>Retention rate: </b><font><p></p></font>
           </span>
         </div>
         <div class="graduation-rate">
-          <span data-toggle="popover" data-trigger="hover" data-placement="top" data-content="10% higher than the national average">
-            <b>Graduation rate: </b><font style="color: #27ae60;">79.4%</font>
+          <span data-toggle="popover" data-trigger="hover" data-placement="top" data-content="">
+            <b>Graduation rate: </b><font><p></p></font>
           </span>
         </div>
         <div class="homepage">
-          <b>Homepage: </b><a href="https://www.rutgers.edu/">https://www.rutgers.edu/</a>
+          <b>Homepage: </b><a target="_blank" href=""></a>
         </div>
         <h3> Costs </h3>
         <div class="in-state-tuition">
-          <span data-toggle="popover" data-trigger="hover" data-placement="top" data-content="12% lower than the national average">
-            <b>In-state tuition and fees: </b><font style="color: #27ae60;">$13,041.45</font>
+          <span data-toggle="popover" data-trigger="hover" data-placement="top" data-content="">
+            <b>In-state tuition and fees: </b><font style="color: #27ae60;"><p></p></font>
           </span>
         </div>
         <div class="out-of-state-tuition">
-          <span data-toggle="popover" data-trigger="hover" data-placement="top" data-content="13% lower than the national average">
-            <b>Out-of-state tuition and fees: </b><font style="color: #27ae60;">$23,041.23</font>
+          <span data-toggle="popover" data-trigger="hover" data-placement="top" data-content="">
+            <b>Out-of-state tuition and fees: </b><font style="color: #27ae60;"><p></p></font>
           </span>
         </div>
         <div class="average-debt">
-          <span data-toggle="popover" data-trigger="hover" data-placement="top" data-content="8% higher than the national average">
-            <b>Average student debt after graduation: </b><font style="color: #c0392b;">$19,041.23</font>
+          <span data-toggle="popover" data-trigger="hover" data-placement="top" data-content="">
+            <b>Average student debt after graduation: </b><font style="color: #c0392b;"><p></p></font>
           </span>
         </div>
         <h3> Statistics </h3>
-        <canvas id="salary-chart" width="400" height="400"></canvas>
-        <canvas id="debt-repayment-chart" width="400" height="400"></canvas>
+        <div class="salary-chart-container">
+          <canvas id="salary-chart" width="400" height="400"></canvas>
+        </div>
+        <div class="repayment-chart-container">
+          <canvas id="repayment-chart" width="400" height="400"></canvas>
+        </div>
       </div>
     </div>
 	
-	  <!-- Main body -->
+	  <!-- Main -->
     <div class="main">
+      <button class="browse-button" onclick="closeInfo();openMenu();">Browse</button>
       <div id="search-div">
-        <img id="search-button" src="assets/menu-logo-white.png" onmouseover="this.src='assets/menu-logo-orange.png'" onmouseout="this.src='assets/menu-logo-white.png'" onclick="toggleSearch();" />
-        <input id="search" placeholder="Search">
+        <button class="search-button" onclick="toggleSearch();">Search</button>
+        <input id="search">
       </div>
       <div id="map"></div>
     </div>
