--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="info-list">
         <h3> Overall </h3>
         <div class="score">
-          <b>Overall score: </b><font style="color: #27ae60;">87</font>
+          <b>Overall score: </b><font style="color: #27ae60;"><p></p></font>
         </div>
         <div class="radar-chart-container">
           <canvas id="radar-chart" width="400" height="400"></canvas>
