--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="info-list">
         <h3> Overall </h3>
         <div class="score">
-          <b>Overall score: </b><font style="color: #27ae60;"><p></p></font>
+          <b>Overall score: </b><font><p></p></font>
         </div>
         <div class="radar-chart-container">
           <canvas id="radar-chart" width="400" height="400"></canvas>
@@ -65,17 +65,17 @@
         <h3> Costs </h3>
         <div class="in-state-tuition">
           <span data-toggle="popover" data-trigger="hover" data-placement="top" data-content="">
-            <b>In-state tuition and fees: </b><font style="color: #27ae60;"><p></p></font>
+            <b>In-state tuition and fees: </b><font><p></p></font>
           </span>
         </div>
         <div class="out-of-state-tuition">
           <span data-toggle="popover" data-trigger="hover" data-placement="top" data-content="">
-            <b>Out-of-state tuition and fees: </b><font style="color: #27ae60;"><p></p></font>
+            <b>Out-of-state tuition and fees: </b><font><p></p></font>
           </span>
         </div>
         <div class="average-debt">
           <span data-toggle="popover" data-trigger="hover" data-placement="top" data-content="">
-            <b>Average student debt after graduation: </b><font style="color: #c0392b;"><p></p></font>
+            <b>Average student debt after graduation: </b><font><p></p></font>
           </span>
         </div>
         <h3> Statistics </h3>
