--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <body ng-app="project">
 
-    <div class="info">
+    <div class="info result" onscroll="scrollInfo();">
 
       <div class="school">
         <h2></h2>
@@ -27,6 +27,8 @@
 
       <!-- Info -->
       <div class="info-list">
+        <button style="float: right; margin-right: 10px;" onclick="closeInfo();"> Close </button>
+        <button style="float: right; margin-right: 10px;" onclick="toggleCompare();"> Compare </button>
         <h3> Overall </h3>
         <div class="score">
           <b>Overall score: </b><font><p></p></font>
@@ -84,6 +86,76 @@
         </div>
         <div class="repayment-chart-container">
           <canvas id="repayment-chart" width="400" height="400"></canvas>
+        </div>
+      </div>
+    </div>
+
+    <div class="info compare" onscroll="scrollCompare();">
+
+      <div class="school">
+        <input id="search" style="height: 60px; font-size: 24; width: 350px;">
+      </div>
+
+      <!-- Compare -->
+      <div class="info-list" onscroll="scrollCompare();">
+        <button style="float: right; margin-right: 10px;" onclick="toggleCompare();"> Close </button>
+        <h3> Overall </h3>
+        <div class="score2">
+          <b>Overall score: </b><font><p></p></font>
+        </div>
+        <div class="radar-chart-container2">
+          <canvas id="radar-chart2" width="400" height="400"></canvas>
+        </div>
+        <h3> About </h3>
+        <div class="location2">
+          <span data-toggle="popover" data-trigger="hover" data-placement="top" data-content="">
+            <b>Location: </b><p></p>
+          </span>
+        </div>
+        <div class="locale2">
+          <b>Locale: </b><p></p>
+        </div>
+        <div class="type2">
+          <b>Type: </b><p></p>
+        </div>
+        <div class="admission-rate2">
+          <b>Admission rate: </b><p></p>
+        </div>
+        <div class="retention-rate2">
+          <span data-toggle="popover" data-trigger="hover" data-placement="top" data-content="">
+            <b>Retention rate: </b><font><p></p></font>
+          </span>
+        </div>
+        <div class="graduation-rate2">
+          <span data-toggle="popover" data-trigger="hover" data-placement="top" data-content="">
+            <b>Graduation rate: </b><font><p></p></font>
+          </span>
+        </div>
+        <div class="homepage2">
+          <b>Homepage: </b><a target="_blank" href=""></a>
+        </div>
+        <h3> Costs </h3>
+        <div class="in-state-tuition2">
+          <span data-toggle="popover" data-trigger="hover" data-placement="top" data-content="">
+            <b>In-state tuition and fees: </b><font><p></p></font>
+          </span>
+        </div>
+        <div class="out-of-state-tuition2">
+          <span data-toggle="popover" data-trigger="hover" data-placement="top" data-content="">
+            <b>Out-of-state tuition and fees: </b><font><p></p></font>
+          </span>
+        </div>
+        <div class="average-debt2">
+          <span data-toggle="popover" data-trigger="hover" data-placement="top" data-content="">
+            <b>Average student debt after graduation: </b><font><p></p></font>
+          </span>
+        </div>
+        <h3> Statistics </h3>
+        <div class="salary-chart-container2">
+          <canvas id="salary-chart2" width="400" height="400"></canvas>
+        </div>
+        <div class="repayment-chart-container2">
+          <canvas id="repayment-chart2" width="400" height="400"></canvas>
         </div>
       </div>
     </div>
