--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
       <!-- Info -->
       <div class="info-list">
-        <button style="float: right; margin-right: 10px;" onclick="closeInfo();"> Close </button>
-        <button style="float: right; margin-right: 10px;" onclick="toggleCompare();"> Compare </button>
+        <button class="btn btn-primary" style="float: right; margin-right: 10px;" onclick="closeInfo();"> Close </button>
+        <button class="btn btn-primary" style="float: right; margin-right: 10px;" onclick="toggleCompare();"> Compare </button>
         <h3> Overall </h3>
         <div class="score">
           <b>Overall score: </b><font><p></p></font>
@@ -98,7 +98,7 @@
 
       <!-- Compare -->
       <div class="info-list" onscroll="scrollCompare();">
-        <button style="float: right; margin-right: 10px;" onclick="toggleCompare();"> Close </button>
+        <button class="btn btn-primary" style="float: right; margin-right: 10px;" onclick="toggleCompare();"> Close </button>
         <h3> Overall </h3>
         <div class="score2">
           <b>Overall score: </b><font><p></p></font>
